# k8s-ai

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: launch-post-linkedin.md  launch-post-reddit.md  release-notes-v0.1.1.md
k8s_ai/: __main__.py  cli.py  config.py  models.py
k8s_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
k8s_ai/analyzer/: llm_analyzer.py
k8s_ai/collector/: __init__.py  kubectl_collector.py
k8s_ai/fixer/: __init__.py  command_generator.py
k8s_ai/utils/: __init__.py  redaction.py  truncation.py
